# flask-sample

./: Makefile  README.md  app.py  app.yaml  logsetting.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
templates/: hello.html
